[tool.poetry]
name = "entity-auth"
version = "1.0.0"
description = "Update Auth service with business data."
authors = ["Vysakh Menon"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "entity_auth", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
python-dotenv = "^1.0.0"
sentry-sdk = "^1.27.1"
launchdarkly-server-sdk = "^8.1.4"
business-model = { git = "https://github.com/bcgov/lear.git", subdirectory = "python/common/business-registry-model", branch = "feature-legal-name" }
simple_cloudevent = { git = "https://github.com/daxiom/simple-cloudevent.py" }
requests = "^2.31.0"
google-auth = "^2.21.0"
google-cloud-pubsub = "^2.17.1"
pg8000 = "^1.29.8"
attrs = "^23.1.0"
dpath = "^2.1.6"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
Flask-Migrate = "^4.0.4"
flask-babel = "^3.1.0"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
black = "^23.7.0"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
