[tool.poetry]
name = "entity-pay"
version = "3.1.0"
description = "Applies payments to pending filings, and if not FED puts them on the queue the Filer listens to."
authors = ["thor <thor@wolpert.ca>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "entity_pay", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
python-dotenv = "^1.0.0"
sentry-sdk = "^1.27.1"
launchdarkly-server-sdk = "^8.1.4"
legal_api = { git = "https://github.com/bcgov/lear.git", subdirectory = "legal-api", branch = "feature-legal-name" }
simple_cloudevent = { git = "https://github.com/daxiom/simple-cloudevent.py" }
requests = "^2.31.0"
google-auth = "^2.21.0"
google-cloud-pubsub = "^2.17.1"
pg8000 = "^1.29.8"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
