[tool.poetry]
name = "entity-pay"
version = "3.1.0"
description = "Applies payments to pending filings, and if not FED puts them on the queue the Filer listens to."
authors = ["thor <thor@wolpert.ca>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "entity_pay", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
python-dotenv = "^1.0.0"
sentry-sdk = "^1.27.1"
launchdarkly-server-sdk = "^8.1.4"
legal_api = { git = "https://github.com/bcgov/lear.git", subdirectory = "legal-api", branch = "feature-legal-name" }
simple_cloudevent = { git = "https://github.com/daxiom/simple-cloudevent.py" }
requests = "^2.31.0"
google-auth = "^2.21.0"
google-cloud-pubsub = "^2.17.1"
pg8000 = "^1.29.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
requests-mock = "^1.11.0"
black = "^23.12.1"
pylint = "^3.0.3"
bandit = "^1.7.6"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"

[tool.bandit]
exclude_dirs = [".venv","tests"]
skips = ["B104"]

[tool.flake8]
ignore = ["F401","E402", "Q000", "E203", "W503", "W504" ]
exclude = [
    ".venv",
    ".git",
    "*migrations*"
]
per-file-ignores = [
    "__init__.py:F401",
    "*.py:B902"
]
max-line-length = 120
docstring-min-length=10
count = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
ignore = [ "migrations", "test"]
notes = ["FIXME","XXX","TODO"]
ignored-modules= ["flask_sqlalchemy", "sqlalchemy", "SQLAlchemy" , "alembic", "scoped_session"]
ignored-classes= "scoped_session"
disable = "C0209,C0301,W0511,W0613,W0703,W1514,R0801,R0902,R0903,R0911,R0401,R1705,R1718,W3101"
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
