[tool.poetry]
name = "business-registry-common"
version = "0.1.0"
description = ""
authors = ["BrandonSharratt <brandon@daxiom.com>"]
readme = "README.md"
packages = [{include = "business_common", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pycountry = "^24.6.1"
datedelta = "^1.4"
pytz = "^2025.1"
registry-schemas = {git = "https://github.com/bcgov/business-schemas.git", rev = "2.18.39"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.1.2"
freezegun = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
