[project]
name = "business-model"
version = "3.0.0"
description = ""
authors = [
    {name = "thor",email = "1042854+thorwolpert@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "sql-versioning @ git+https://github.com/bcgov/lear.git@main#subdirectory=python/common/sql-versioning-alt",
    "registry-schemas @ git+https://github.com/bcgov/business-schemas.git@2.18.39",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "pg8000 (>=1.31.2,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "datedelta (>=1.4,<2.0)",
    "pytz (>=2025.1,<2026.0)",
    "flask-babel (>=4.0.0,<5.0.0)",
    "croniter (>=6.0.0,<7.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
]

[tool.poetry]
packages = [{include = "business_model", from = "src"},
            {include = "business_model_migrations", from = "src"}
           ]

[tool.poetry.group.dev.dependencies]
flask = "^3.1.0"
python-dotenv = "^1.0.1"
freezegun = "^1.5.1"
pytest = "^8.3.5"
zimports = "^0.6.1"
black = "^25.1.0"


[tool.poetry.dependencies]
sql-versioning = {develop = true}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
